--- a/oSint/website/templates/dashboard.html
+++ b/oSint/website/templates/dashboard.html
@@ -35,6 +35,10 @@
                 font-size: 3.5rem;
             }
         }
+        table td {
+            word-wrap: break-word;         /* All browsers since IE 5.5+ */
+            overflow-wrap: break-word;     /* Renamed property in CSS3 draft spec */
+        }
     </style>
 
 
