--- a/oSint/website/static/css/dashboard.css
+++ b/oSint/website/static/css/dashboard.css
@@ -22,7 +22,8 @@ body {
 .sidebar-sticky {
   position: relative;
   top: 0;
-  height: calc(100vh - 48px);
+  min-height: calc(100vh - 48px);
+  height: auto;
   padding-top: .5rem;
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
