--- a/oSint/website/templates/home.html
+++ b/oSint/website/templates/home.html
@@ -34,6 +34,7 @@
         background-size: contain;
         cursor: wait;
     }
+    .buttonHolder{ text-align: center; }
     </style>
 </head>
 
@@ -69,7 +70,9 @@
                     <input type="text" class="form-control" id="url" name="url" placeholder="Enter website" required />
                 </div>
                 <br />
-                <button id="submit-btn" type="submit" class="btn btn-primary" onclick="loading();">Start hacking</button>
+                <div class="buttonHolder">
+                    <button id="submit-btn" type="submit" class="btn btn-primary" onclick="loading();">Start hacking</button>
+                </div>
             </form>
         </div>
     </div>
