--- a/oSint/website/templates/dashboard-phase4.html
+++ b/oSint/website/templates/dashboard-phase4.html
@@ -29,16 +29,16 @@
                 </tr>
             </thead>
             <tbody>
-                {% for c in cookies_before %}
+                {% for key, value in cookies_before.items() %}
                 <tr>
-                    <th style="word-wrap: break-word;min-width: 7vw;max-width: 7vw;">{{ c.name }}</th>
-                    <td style="word-wrap: break-word;min-width: 30vw;max-width: 30vw;">{{ c.value }}</td>
-                    <td style="word-wrap: break-word;min-width: 10vw;max-width: 10vw;">{{ c.domain }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.path }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.secure }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.httpOnly }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.expiry }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.httpOnly }}</td>
+                    <th style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ key }}</th>
+                    <td style="word-wrap: break-word;min-width: 25vw;max-width: 25vw;">{{ value['value'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 10vw;max-width: 10vw;">{{ value['domain'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ value['path'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ value['secure'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ value['httpOnly'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 10vw;max-width: 10vw;">{{ value['expiry'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ value['httpOnly'] }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -63,18 +63,18 @@
                 </tr>
             </thead>
             <tbody>
-                {% for c in cookies_after %}
+                {% for key, value in cookies_after.items() %}
                 <tr>
-                    <th style="word-wrap: break-word;min-width: 7vw;max-width: 7vw;">{{ c.name }}</th>
-                    <td style="word-wrap: break-word;min-width: 30vw;max-width: 30vw;">{{ c.value }}</td>
-                    <td style="word-wrap: break-word;min-width: 10vw;max-width: 10vw;">{{ c.domain }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.path }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.secure }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.httpOnly }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.expiry }}</td>
-                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ c.httpOnly }}</td>
-                </tr>
+                    <th style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ key }}</th>
+                    <td style="word-wrap: break-word;min-width: 25vw;max-width: 25vw;">{{ value['value'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 10vw;max-width: 10vw;">{{ value['domain'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ value['path'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ value['secure'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ value['httpOnly'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 10vw;max-width: 10vw;">{{ value['expiry'] }}</td>
+                    <td style="word-wrap: break-word;min-width: 5vw;max-width: 5vw;">{{ value['httpOnly'] }}</td></tr>
                 {% endfor %}
+            </tbody>
             </tbody>
         </table>
     </div>
