--- a/oSint/website/templates/home.html
+++ b/oSint/website/templates/home.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.26/jquery.autocomplete.min.js"></script>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        crossorigin="anonymous" />
+
     <link href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.css" rel="stylesheet" />
 
 
@@ -35,6 +38,13 @@
         cursor: wait;
     }
     .buttonHolder{ text-align: center; }
+    .form-check-inline .form-check-input:checked{
+        background-color:lightgrey;
+        border: white;
+    }
+    .form-check-inline .form-check-input:focus{
+        box-shadow: 0 0 0 0;
+    }
     </style>
 </head>
 
@@ -61,14 +71,76 @@
     {% endif %} {% endfor %} {% endif %} {% endwith %}
     <br />
     <div class = "vertical-center" >
+
         <div id="loading"></div>
+
+
         <div class="container" id = "content">
-            <h1 align="center">URL</h1>
+            <h1 align="center">Hack me!</h1>
             <form method="POST">
                 <h3 align="center"></h3>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="url" name="url" placeholder="Enter website" required />
+
+                <!-- Checkboxes -->
+                <div class="border-2 shadow p-3 mb-5 bg-body rounded" style="padding: 5px;">
+                    <!-- Phase 1  -->
+                    <h5>Phase 1:</h5>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-one" checked>
+                        <label class="form-check-label">DNS & IP Analysis</label>
+                    </div>
+                    <div style="padding-left: 40px;">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-one-options value="nmap" checked>
+                            <label class="form-check-label">Use nmap</label>
+                        </div>
+                    </div>
+
+                    <!-- Phase 2  -->
+                    <h5>Phase 2:</h5>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-two" checked>
+                        <label class="form-check-label">Metadata Check</label>
+                    </div>
+                    <div style="padding-left: 40px;">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-two-options value="wappalyzer" checked>
+                            <label class="form-check-label">Use wappalyzer</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-two-options value="ashok" checked>
+                            <label class="form-check-label">Use ashok</label>
+                        </div>
+                    </div>
+
+                    <!-- Phase 3  -->
+                    <h5>Phase 3:</h5>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-three" checked>
+                        <label class="form-check-label">Vulnerability Check</label>
+                    </div>
+
+                    <!-- Phase 4  -->
+                    <h5>Phase 4:</h5>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" name="hacking-options" value="phase-four" checked>
+                        <label class="form-check-label" for="flexSwitchCheckDefault">Cookie Compliance</label>
+                    </div>
+                    <div style="padding-left: 40px;">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name = phase-four-options value="sitemap" checked>
+                            <label class="form-check-label">Use sitemap</label>
+                        </div>
+                    </div>
+                    
                 </div>
+
+                
+                <!-- URL Input -->
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon3">URL:</span>
+                    <input type="text" class="form-control" name="url" aria-describedby="basic-addon3"placeholder="Enter website..." required>
+                </div>
+
                 <br />
                 <div class="buttonHolder">
                     <button id="submit-btn" type="submit" class="btn btn-primary" onclick="loading();">Start hacking</button>
@@ -82,6 +154,7 @@
             $("#loading").show();
             $("#content").hide();
         }
+
     </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
