--- a/oSint/website/templates/dashboard-phase1.html
+++ b/oSint/website/templates/dashboard-phase1.html
@@ -1,17 +1,47 @@
-{% extends "dashboard.html" %} {% block title %}Phase 1{% endblock %} 
-{% block content%}
-<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-    <div
-        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">DNS & IP Analysis</h1>
-        <div class="btn-toolbar mb-2 mb-md-0">
-            <div class="btn-group me-2">
-                <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+{% extends "dashboard.html" %} {% block title %}Phase 1{% endblock %}
+{% block content %}
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <div
+                class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+            <h1 class="h2">DNS & IP Analysis</h1>
+            <div class="btn-toolbar mb-2 mb-md-0">
+                <div class="btn-group me-2">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+                </div>
             </div>
         </div>
-    </div>
 
-    <h2>Section title</h2>
-</main>
+        <h2>NMAP</h2>
+        <div class="table-responsive">
+            <table class="table align-middle table-striped table-bordered">
+                <thead>
+                <tr>
+                    <th scope="col">IP</th>
+                    <th scope="col">State</th>
+                    <th scope="col">Port</th>
+                    <th scope="col">Protocols</th>
+                    <th scope="col">Operation System</th>
+                    <th scope="col">System Accuracy</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for elem in host %}
+                    <tr>
+                        <th>{{ elem['ip'] }}</th>
+                        <th>{{ elem['state'] }}</th>
+                        <th>
+                            {% for port in elem['port'] %}
+                                <li>{{ port[0] }} {{ port[1] }}</li>
+                            {% endfor %}
+                        </th>
+                        <th>{{ elem['protocols'][0] }}</th>
+                        <th>{{ elem['os'] }}</th>
+                        <th>{{ elem['accuracy'] }}%</th>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </main>
 {% endblock %}
