--- a/oSint/website/templates/home.html
+++ b/oSint/website/templates/home.html
@@ -2,47 +2,51 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.26/jquery.autocomplete.min.js"></script>
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.26/jquery.autocomplete.min.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        crossorigin="anonymous" />
-    <link href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.css" rel="stylesheet" />
+          crossorigin="anonymous"/>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.css" rel="stylesheet"/>
 
 
     <title>Home</title>
 
     <style>
-    .vertical-center {
-        min-height: 80%;  /* Fallback for browsers do NOT support vh unit */
-        min-height: 80vh; /* These two lines are counted as one :-)       */
+        .vertical-center {
+            min-height: 80%; /* Fallback for browsers do NOT support vh unit */
+            min-height: 80vh; /* These two lines are counted as one :-)       */
 
-        display: flex;
-        align-items: center;
-    }
-    div#loading {
-        width: 50px;
-        height: 50px;
-        margin: auto;
-        display: none;
-        background: url(/static/loading_image.gif);
-        background-size: contain;
-        cursor: wait;
-    }
-    .buttonHolder{ text-align: center; }
+            display: flex;
+            align-items: center;
+        }
+
+        div#loading {
+            width: 50px;
+            height: 50px;
+            margin: auto;
+            display: none;
+            background: url(/static/loading_image.gif);
+            background-size: contain;
+            cursor: wait;
+        }
+
+        .buttonHolder {
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
-    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="/">Treuhand</a>    
-    </header>
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="/">Treuhand</a>
+</header>
+{% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
     'error' %}
     <div class="alert alert-danger alter-dismissable fade show" role="alert">
@@ -51,49 +55,62 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    {% else %}
+{% else %}
     <div class="alert alert-success alter-dismissable fade show" role="alert">
         {{ message }}
         <button type="button" class="close" data-dismiss="alert">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    {% endif %} {% endfor %} {% endif %} {% endwith %}
-    <br />
-    <div class = "vertical-center" >
-        <div id="loading"></div>
-        <div class="container" id = "content">
-            <h1 align="center">URL</h1>
-            <form method="POST">
-                <h3 align="center"></h3>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="url" name="url" placeholder="Enter website" required />
-                </div>
-                <br />
-                <div class="buttonHolder">
-                    <button id="submit-btn" type="submit" class="btn btn-primary" onclick="loading();">Start hacking</button>
-                </div>
-            </form>
-        </div>
+{% endif %} {% endfor %} {% endif %} {% endwith %}
+<br/>
+<div class="vertical-center">
+    <div id="loading"></div>
+    <div class="container" id="content">
+        <h1 align="center">URL</h1>
+        <form method="POST">
+            <h3 align="center"></h3>
+            <div class="form-group">
+                <input type="text" class="form-control" id="url" name="url" placeholder="Enter website" required/>
+            </div>
+            <br/>
+            <div class="buttonHolder">
+                <button id="submit-btn" type="submit" class="btn btn-primary" onclick="loading();">Start hacking
+                </button>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" name = "cookie_check" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                    Run Cookies
+                </label>
+            </div>
+                        <div class="form-check">
+                <input class="form-check-input" type="checkbox" name = "nmap_check" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                    Run NMAP
+                </label>
+            </div>
+        </form>
     </div>
+</div>
 
-    <script type="text/javascript">
-        function loading() {
-            $("#loading").show();
-            $("#content").hide();
-        }
-    </script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+<script type="text/javascript">
+    function loading() {
+        $("#loading").show();
+        $("#content").hide();
+    }
+</script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
 
 </html>
