Display ashok results

--- a/oSint/website/templates/dashboard-phase2.html
+++ b/oSint/website/templates/dashboard-phase2.html
@@ -11,7 +11,7 @@
             </div>
         </div>
     </div>
-
+    {% if webtech is not none %}
     <h2>Web technologies</h2>
     <div class="table-responsive">
         <table class="table align-middle table-striped table-bordered">
@@ -33,6 +33,6 @@
             </tbody>
         </table>
     </div>
-
+    {% endif %}    
 </main>
 {% endblock %}
