frontend fixes, ashok ascii

--- a/oSint/website/templates/dashboard-phase3.html
+++ b/oSint/website/templates/dashboard-phase3.html
@@ -12,34 +12,33 @@
             </div>
         </div>
 
-
-        <h2>Firewalls</h2>
-        <pre>{% print(firewalls[0]) %}</pre>
-
-        <div class="table-responsive">
-            <table class="table align-middle table-striped table-bordered">
-                <thead>
-                <tr>
-                    <th scope="col">Firewall found</th>
-                    <th scope="col">Firewall</th>
-                    <th scope="col">Manufacturer</th>
-                    <th scope="col">Url</th>
-                </tr>
-                </thead>
-                <tbody>
-
-                {% for fire in firewalls %}
+        {% if firewalls is not none %}
+            <h2>Firewalls</h2>
+            <pre>{% print(firewalls[0]) %}</pre>
+            <div class="table-responsive">
+                <table class="table align-middle table-striped table-bordered">
+                    <thead>
                     <tr>
-                        <td>{{ fire['detected'] }}</td>
-                        <td>{{ fire['firewall'] }}</td>
-                        <td>{{ fire['manufacturer'] }}</td>
-                        <td>{{ fire['url'] }}</td>
-
+                        <th scope="col">Firewall found</th>
+                        <th scope="col">Firewall</th>
+                        <th scope="col">Manufacturer</th>
+                        <th scope="col">Url</th>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+                    </thead>
+                    <tbody>
 
+                    {% for fire in firewalls %}
+                        <tr>
+                            <td>{{ fire['detected'] }}</td>
+                            <td>{{ fire['firewall'] }}</td>
+                            <td>{{ fire['manufacturer'] }}</td>
+                            <td>{{ fire['url'] }}</td>
+
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        {% endif %}
     </main>
 {% endblock %}
