--- a/oSint/website/templates/home.html
+++ b/oSint/website/templates/home.html
@@ -100,6 +100,10 @@
                                value="nmap" checked>
                         <label class="form-check-label">Use nmap</label>
                     </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-one-options value="ashok" checked>
+                        <label class="form-check-label">Use ashok</label>
+                    </div>
                 </div>
 
                 <!-- Phase 2  -->
@@ -114,11 +118,7 @@
                                value="wappalyzer" checked>
                         <label class="form-check-label">Use wappalyzer</label>
                     </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-two-options
-                               value="ashok" checked>
-                        <label class="form-check-label">Use ashok</label>
-                    </div>
+                    
                 </div>
 
                 <!-- Phase 3  -->
