--- a/oSint/website/templates/dashboard-phase1.html
+++ b/oSint/website/templates/dashboard-phase1.html
@@ -11,158 +11,158 @@
                 </div>
             </div>
         </div>
-
-        <h2>NMAP</h2>
-        <div class="table-responsive">
-            <table class="table align-middle table-striped table-bordered">
-                <thead>
-                <tr>
-                    <th scope="col">IP</th>
-                    <th scope="col">State</th>
-                    <th scope="col">Port</th>
-                    <th scope="col">Protocols</th>
-                    <th scope="col">Operation System</th>
-                    <th scope="col">System Accuracy</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for elem in host %}
-                    <tr>
-                        <th>{{ elem['ip'] }}</th>
-                        <th>{{ elem['state'] }}</th>
-                        <th>
-                            {% for port in elem['port'] %}
-                                <li>{{ port[0] }} {{ port[1] }}</li>
-                            {% endfor %}
-                        </th>
-                        <th>
-                            {% for prot in elem['protocols'] %}
-                                <li>{{ prot }} </li>
-                            {% endfor %}
-                        </th>
-                        <th>{{ elem['os'] }}</th>
-                        <th>{{ elem['accuracy'] }}%</th>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-
-        <!-- Ashok -->
-
-        <h2>Ashok results</h2>
-
-        <!-- Ashok - headers -->
-        <h4>Extracted headers:</h4>
-        {% for key, value in ashok['headers'].items() %}
-            <h6>{{ key }}</h6>
+        {% if host is not none %}
+            <h2>NMAP</h2>
             <div class="table-responsive">
                 <table class="table align-middle table-striped table-bordered">
                     <thead>
                     <tr>
-                        {% for k in value.keys() %}
-                            <th scope="col">{{ k }}</th>
-                        {% endfor %}
+                        <th scope="col">IP</th>
+                        <th scope="col">State</th>
+                        <th scope="col">Port</th>
+                        <th scope="col">Protocols</th>
+                        <th scope="col">Operation System</th>
+                        <th scope="col">System Accuracy</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        {% for v in value.values() %}
-                            <td>{{ v }}</td>
-                        {% endfor %}
-                    </tr>
+                    {% for elem in host %}
+                        <tr>
+                            <th>{{ elem['ip'] }}</th>
+                            <th>{{ elem['state'] }}</th>
+                            <th>
+                                {% for port in elem['port'] %}
+                                    <li>{{ port[0] }} {{ port[1] }}</li>
+                                {% endfor %}
+                            </th>
+                            <th>
+                                {% for prot in elem['protocols'] %}
+                                    <li>{{ prot }} </li>
+                                {% endfor %}
+                            </th>
+                            <th>{{ elem['os'] }}</th>
+                            <th>{{ elem['accuracy'] }}%</th>
+                        </tr>
+                    {% endfor %}
                     </tbody>
                 </table>
             </div>
+        {% endif %}
+
+        <!-- Ashok -->
+        {% if ashok is not none %}
+            <h2>Ashok results</h2>
+            <pre>{{ ashok['ascii'] }}</pre>
+            <!-- Ashok - headers -->
+            <h4>Extracted headers:</h4>
+            {% for key, value in ashok['headers'].items() %}
+                <h6>{{ key }}</h6>
+                <div class="table-responsive">
+                    <table class="table align-middle table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            {% for k in value.keys() %}
+                                <th scope="col">{{ k }}</th>
+                            {% endfor %}
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            {% for v in value.values() %}
+                                <td>{{ v }}</td>
+                            {% endfor %}
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <br/>
+            {% endfor %}
+
+            <!-- Ashok - DNS -->
             <br/>
-        {% endfor %}
+            <h4>DNS lookup:</h4>
+            <div class="table-responsive">
+                <table class="table align-middle table-striped table-bordered">
+                    <tbody>
+                    {% for key, value in ashok['dns'].items() %}
+                        <tr>
+                            <th>{{ key }}</th>
+                            <td>{{ value }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-        <!-- Ashok - DNS -->
-        <br/>
-        <h4>DNS lookup:</h4>
-        <div class="table-responsive">
-            <table class="table align-middle table-striped table-bordered">
-                <tbody>
-                {% for key, value in ashok['dns'].items() %}
+            <!-- Ashok - subdomain -->
+            <br/>
+            <h4>Subdomain lookup:</h4>
+            <div class="table-responsive">
+                <table class="table align-middle table-striped table-bordered">
+                    <thead>
                     <tr>
-                        <th>{{ key }}</th>
-                        <td>{{ value }}</td>
+                        <th scope="col">URL</th>
+                        <th scope="col">IP</th>
+
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+                    </thead>
+                    <tbody>
+                    {% for key, value in ashok['subdomain'].items() %}
+                        <tr>
+                            <td>{{ key }}</td>
+                            <td>{{ value }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-        <!-- Ashok - subdomain -->
-        <br/>
-        <h4>Subdomain lookup:</h4>
-        <div class="table-responsive">
-            <table class="table align-middle table-striped table-bordered">
-                <thead>
-                <tr>
-                    <th scope="col">URL</th>
-                    <th scope="col">IP</th>
+            <!-- Ashok - DNS -->
+            <br/>
+            <h4>Extracted links:</h4>
+            <div class="table-responsive" style="height: 400px; overflow-y: auto;">
+                <table class="table align-middle table-striped table-bordered">
+                    <tbody>
+                    {% for item in ashok['extract'] %}
+                        <tr>
+                            <td>{{ item }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-                </tr>
-                </thead>
-                <tbody>
-                {% for key, value in ashok['subdomain'].items() %}
-                    <tr>
-                        <td>{{ key }}</td>
-                        <td>{{ value }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+            <!-- Ashok - banner -->
+            <br/>
+            <h4>Grabbed banners:</h4>
+            <div class="table-responsive">
+                <table class="table align-middle table-striped table-bordered">
+                    <tbody>
+                    {% for key, value in ashok['banner'].items() %}
+                        <tr>
+                            <th>{{ key }}</th>
+                            <td>{{ value }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-        <!-- Ashok - DNS -->
-        <br/>
-        <h4>Extracted links:</h4>
-        <div class="table-responsive" style="height: 400px; overflow-y: auto;">
-            <table class="table align-middle table-striped table-bordered">
-                <tbody>
-                {% for item in ashok['extract'] %}
-                    <tr>
-                        <td>{{ item }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-        <!-- Ashok - banner -->
-        <br/>
-        <h4>Grabbed banners:</h4>
-        <div class="table-responsive">
-            <table class="table align-middle table-striped table-bordered">
-                <tbody>
-                {% for key, value in ashok['banner'].items() %}
-                    <tr>
-                        <th>{{ key }}</th>
-                        <td>{{ value }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-        <!-- Ashok - geoip -->
-        <br/>
-        <h4>Geoip lookup:</h4>
-        <div class="table-responsive">
-            <table class="table align-middle table-striped table-bordered">
-                <tbody>
-                {% for key, value in ashok['geoip'].items() %}
-                    <tr>
-                        <th>{{ key }}</th>
-                        <td>{{ value }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
+            <!-- Ashok - geoip -->
+            <br/>
+            <h4>Geoip lookup:</h4>
+            <div class="table-responsive">
+                <table class="table align-middle table-striped table-bordered">
+                    <tbody>
+                    {% for key, value in ashok['geoip'].items() %}
+                        <tr>
+                            <th>{{ key }}</th>
+                            <td>{{ value }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        {% endif %}
     </main>
 {% endblock %}
