--- a/oSint/website/templates/home.html
+++ b/oSint/website/templates/home.html
@@ -101,8 +101,14 @@
                         <label class="form-check-label">Use nmap</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-one-options value="ashok" checked>
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-one-options
+                               value="ashok" checked>
                         <label class="form-check-label">Use ashok</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name=phase-one-options
+                               value="ripe" checked>
+                        <label class="form-check-label">get RIPE info</label>
                     </div>
                 </div>
 
@@ -118,7 +124,7 @@
                                value="wappalyzer" checked>
                         <label class="form-check-label">Use wappalyzer</label>
                     </div>
-                    
+
                 </div>
 
                 <!-- Phase 3  -->
